# gpt-commit

./: README.md  gpt-commit  pyproject.toml
gpt_commit/: __init__.py  gpt_commit.py
