[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt-commit"
version = "0.1.0"
description = "A CLI tool that generates commit messages using AI (via CBORG's OpenAI-compatible API) and stages/commits files in Git."
authors = [
    { name = "Dinesh Kumar", email = "dkumar@lbl.gov" }
]
readme = "README.md"
license = { text = "BSD-2-Clause License" }
requires-python = ">=3.8"
dependencies = [
    "openai",
    "click",
    "gitpython"
]

[project.scripts]
gpt-commit = "gpt_commit:gpt_commit"
